--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
     <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
     <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
-    <title>React App</title>
+    <title>Dumb Spotify</title>
   </head>
   <body>
     <noscript>
